add optional auth for streaming files
